# profi-notifications

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  prek.toml
.github/: PULL_REQUEST_TEMPLATE.md
auth-worker/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum
auth-worker/cmd/auth-worker/: main.go  main_test.go
auth-worker/internal/adapter/cookiefile/: browserjson.go  store.go  store_test.go
auth-worker/internal/adapter/filelock/: locker.go  locker_test.go
auth-worker/internal/adapter/grpcclient/: health.go  health_test.go
auth-worker/internal/adapter/grpcserver/: health.go  health_test.go  mapping.go  server.go  server_test.go
auth-worker/internal/adapter/httprenew/: httpcookies.go  redact.go  renewer.go  renewer_test.go
auth-worker/internal/adapter/statusfile/: writer.go  writer_test.go
auth-worker/internal/domain/: cookie.go  cookie_test.go  errors.go  jar.go  status.go  testsupport_test.go  token.go  token_test.go
auth-worker/internal/platform/atomicjson/: write.go  write_test.go
auth-worker/internal/platform/clock/: system.go
auth-worker/internal/platform/config/: config.go  config_test.go  unset_test.go
auth-worker/internal/usecase/: get_cookies.go  get_cookies_test.go  ports.go  refresh_auth.go  refresh_auth_test.go  testsupport_test.go  worker.go  worker_test.go
auth-worker/proto/auth/v1/: cookies.proto
llm/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
llm/app/: __init__.py  asgi.py  main.py
llm/app/application/: __init__.py  assess_orders.py  errors.py  ports.py
llm/app/domain/: __init__.py  assessment.py  decision.py  listing.py  notification.py  profile.py  result.py
llm/app/infrastructure/: __init__.py
llm/app/infrastructure/config/: profile.py  settings.py
llm/app/infrastructure/llm/: groq_assessor.py  openai_assessor.py  prompts.py  schemas.py
llm/app/infrastructure/messaging/: broker.py  mapping.py  publisher.py  schemas.py  subscriber.py
llm/app/infrastructure/observability/: logging.py
llm/tests/: fakes.py  test_smoke.py
llm/tests/integration/: test_composition.py  test_messaging_flow.py
llm/tests/unit/: test_assess_orders.py  test_broker.py  test_decision.py  test_groq_assessor.py  test_listing.py  test_logging.py  test_mapping.py  test_notification.py  test_notification_message.py  test_openai_assessor.py  test_profile.py  test_settings.py
notifications/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bunfig.toml  docker-compose.yml  package.json  tsconfig.json
notifications/scripts/: publish-sample.ts
notifications/src/: main.ts
notifications/src/application/: delivery-decision.ts  errors.test.ts  errors.ts  ports.ts  send-notification.test.ts  send-notification.ts
notifications/src/domain/: notification.test.ts  notification.ts
notifications/src/infrastructure/config/: config.test.ts  config.ts
notifications/src/infrastructure/http/: server.test.ts  server.ts
notifications/src/infrastructure/messaging/: retry.ts  (+8 more)
notifications/tests/integration/: broker.test.ts  delivery-flow.test.ts
notifications/tests/support/: fakes.ts
order-core-service/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
order-core-service/alembic/: env.py
order-core-service/alembic/versions/: 0001_init.py
order-core-service/app/: main.py
order-core-service/app/application/: dto.py  errors.py  ingest_orders.py  ports.py  process_assessment.py  relay_outbox.py
order-core-service/app/domain/: assessment.py  decision.py  notification.py  order.py  source.py  status.py
order-core-service/app/infrastructure/config/: settings.py
order-core-service/app/infrastructure/db/: engine.py  models.py  outbox_dispatch.py  repositories.py  unit_of_work.py
order-core-service/app/infrastructure/messaging/: broker.py  event_publisher.py  mapping.py  publisher.py  reliability.py  schemas.py  subscribers.py
order-core-service/app/infrastructure/observability/: logging.py
order-core-service/app/infrastructure/outbox/: relay.py
order-core-service/tests/: conftest.py  fakes.py
order-core-service/tests/contract/: test_inbound_contracts.py  test_outbound_contracts.py
order-core-service/tests/integration/: conftest.py  test_db.py  test_messaging_flow.py  test_outbox_relay.py
order-core-service/tests/unit/: test_assessment.py  test_decision.py  test_ingest_orders.py  test_logging.py  test_mapping.py  test_notification.py  test_order.py  test_outbox_relay_poller.py  test_process_assessment.py  test_relay_outbox.py  test_reliability.py  test_settings.py  test_status.py
parser-worker/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
parser-worker/proto/: cookies.proto
parser-worker/src/: lib.rs  main.rs
parser-worker/src/application/: mod.rs  ports.rs  process_request.rs
parser-worker/src/domain/: cookies.rs  error.rs  mod.rs  order.rs  request.rs  result.rs
parser-worker/src/infrastructure/: amqp.rs  auth.rs  config.rs  mod.rs  telemetry.rs
parser-worker/src/infrastructure/amqp/: codec.rs  consumer.rs  mod.rs  publisher.rs
parser-worker/src/infrastructure/auth/: mod.rs
parser-worker/src/infrastructure/profi/: board_query.graphql  dto.rs  mapping.rs  mod.rs  request.rs
scheduler/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
scheduler/app/: asgi.py  main.py
scheduler/app/application/: build_parse_command.py  ports.py
scheduler/app/domain/: command.py
scheduler/app/infrastructure/: ids.py
scheduler/app/infrastructure/config/: settings.py
scheduler/app/infrastructure/messaging/: broker.py  mapping.py  scheduling.py  schemas.py
scheduler/app/infrastructure/observability/: logging.py  metrics.py
scheduler/tests/: fakes.py
scheduler/tests/integration/: test_composition.py  test_messaging.py
scheduler/tests/unit/: test_build_parse_command.py  test_command.py  test_ids.py  test_logging.py  test_mapping.py  test_metrics.py  test_settings.py
(+6 files in other folders)
