[project]
name = "llm"
version = "0.1.0"
description = "Stateless LLM-оценщик заявок Profi.ru: parse.results → Groq → notifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faststream[rabbit]>=0.7.2",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
