[package]
name = "parser-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
lapin = "4.10.0"
prost = "0.14.4"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tonic = "0.14.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.15.0"
rstest = "0.26.1"
tokio-test = "0.4.5"
wiremock = "0.6.5"
