[project]
name = "scheduler"
version = "0.1.0"
description = "Планировщик: по расписанию публикует команды парсинга (parse.requests) в RabbitMQ через Taskiq + FastStream"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faststream[rabbit]>=0.7.2",
    "taskiq>=0.11.0",
    "taskiq-faststream>=0.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/asgi.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.deptry.per_rule_ignores]
# uvicorn — ASGI-сервер из CMD, в коде не импортируется.
DEP002 = ["uvicorn"]

[tool.vulture]
min_confidence = 80
ignore_names = ["model_config", "tb", "scope"]
ignore_decorators = ["@broker.subscriber", "@app.after_startup", "@app.after_shutdown"]
